--- a/Day 64 - Movies Rank/top-movies/templates/select.html
+++ b/Day 64 - Movies Rank/top-movies/templates/select.html
@@ -1,13 +1,12 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 
-{% block title %}Select Movie{% endblock %}
+{% block title %} Select Movie {% endblock %}
 
 {% block content %}
 <div class="container">
     <h1 class="heading">Select Movie</h1>
-  <p>
-    <a href="#"> MOVIE TITLE - MOVIE RELEASE DATE</a>
-  </p>
-
+    {% for movie in options: %}
+        <p><a href="{{url_for('find_movie', id=movie.id)}}"> {{movie.title}} - {{movie.release_date}}</a></p>
+    {% endfor %}
 </div>
 {% endblock %}
